# bevy

./: .gitignore  Cargo.toml  search-index.js
_release-content/migration-guides/: computed_stack_index.md  removed_PositionedGlyph_byte_index_and_byte_length.md  ui_stack_index.md
bevy/: all.html
bevy/app/: trait.AppLabel.html
bevy/gltf/: enum.GltfError.html
bevy/math/: struct.Vec4.html
bevy/pbr/: struct.DirectionalLightBundle.html  struct.MeshPipeline.html  struct.StandardMaterial.html  trait.Material.html
bevy/prelude/: enum.Color.html  enum.GridTrackRepetition.html  enum.Visibility.html  struct.Commands.html  struct.DirectionalLightBundle.html  struct.GridTrack.html  struct.Mesh.html  struct.StandardMaterial.html  struct.Vec4.html  struct.World.html  trait.Material.html
bevy/render/: struct.MainWorld.html
bevy/sprite/: trait.Material2d.html
bevy/ui/: enum.GridTrackRepetition.html  struct.GridTrack.html  struct.UiSurface.html
crates/bevy_clipboard/: Cargo.toml
crates/bevy_clipboard/src/: lib.rs
crates/bevy_ecs/: Cargo.toml
crates/bevy_internal/: Cargo.toml
crates/bevy_platform_services/: Cargo.toml  README.md
crates/bevy_tasks/: Cargo.toml
crates/bevy_text/: Cargo.toml
crates/bevy_ui/: Cargo.toml
crates/bevy_ui_render/: Cargo.toml
crates/bevy_ui_widgets/: Cargo.toml
crates/taffy/: CONTRIBUTING.md  Cargo.toml
docs/: cargo_features.md
examples/: README.md
examples/2d/: 2d_shapes.rs  text2d.rs
examples/3d/: bloom.rs  color_grading.rs  spotlight.rs
examples/animation/: animated_ui.rs
examples/games/: alien_cake_addict.rs  (+3 more)
(+239 files in other folders)
