[package]
name = "bevy_clipboard"
version = "0.16.0-dev"
edition = "2024"
description = "Provides clipboard support for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "clipboard"]

[features]
default = ["image"]
image = ["bevy_image", "wgpu-types", "bevy_asset"]

[dependencies]
# bevy
bevy_app = { path = "../bevy_app", version = "0.16.0-dev", default-features = false }
bevy_asset = { path = "../bevy_asset", version = "0.16.0-dev", default-features = false, optional = true }
bevy_ecs = { path = "../bevy_ecs", version = "0.16.0-dev", default-features = false }
bevy_platform = { path = "../bevy_platform", version = "0.16.0-dev", default-features = false }
bevy_image = { path = "../bevy_image", version = "0.16.0-dev", default-features = false, optional = true }
wgpu-types = { version = "24", default-features = false, optional = true }

[target.'cfg(any(windows, unix))'.dependencies]
arboard = { version = "3.5.0", features = ["image-data"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features = ["Navigator", "Clipboard"] }
wasm-bindgen-futures = "0.4"

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
